k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
  namespace: nodejs-app
  labels:
    app.kubernetes.io/name: nodejs-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nodejs-app
